[package]
name = "kvs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
tonic = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "signal"] }
structopt = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.9"
anyhow = "1.0"
log = "0.4"
bytes = { version = "1", features = ["serde"] }
bincode = "1.3"

lol-core = { version = "0.9.5", features = ["gateway", "simple"] }

[[bin]]
name = "client"
path = "src/kvs_client.rs"

[[bin]]
name = "server"
path = "src/kvs_server.rs"
