[package]
name = "raft-kv-memstore"
version = "0.1.0"
readme = "README.md"

edition = "2021"
description = "An example distributed key-value store built upon `openraft`."
keywords = ["raft", "consensus"]
license = "MIT OR Apache-2.0"


[dependencies.openraft]
git = "https://github.com/datafuselabs/openraft.git"
rev = "4b78dd38b9f3b22d87695fb06446dcf0311629c2"
features = ["serde"]

[dependencies.openraft-sledstore]
git = "https://github.com/datafuselabs/openraft.git"
rev = "4b78dd38b9f3b22d87695fb06446dcf0311629c2"

[dependencies]
actix-web = "4.0.0-rc.2"
async-trait = "0.1.36"
clap = { version = "4.1.11", features = ["derive", "env"] }
reqwest = { version = "0.11.9", features = ["json"] }
serde = { version="1.0.114", features=["derive", "rc"]}
serde_json = "1.0.57"
tokio = { version = "1.0", default-features = false, features = ["sync"] }
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.0", features = ["env-filter"] }
sled = "0.34.7"

[dev-dependencies]
anyhow = "1.0.63"
maplit = "1.0.2"

[features]

[package.metadata.docs.rs]
all-features = true
